--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url(styling.css);
 
 #something {
-  background-image: url(/media/jesse-orrico-60373.jpg);
+  background-image: url(/media/jesse-orrico-60373.webp);
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 2;
@@ -10,7 +10,7 @@
 }
 
 #something2 {
-  background-image: url(/media/mammoth-1257288_1920.jpg);
+  background-image: url(/media/mammoth-1257288_1920.webp);
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 2;
