--- a/css/styling.css
+++ b/css/styling.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&display=swap");
 
+/* Color scheme: #D0CCD0, FBFCFF, 605856, 1C6E8C, 274156 */
+
 * {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 h1,
@@ -17,11 +19,21 @@ h6 {
 }
 
 .container {
-    overflow: scroll;
-    padding: 0px;
-    margin: 0px;
-    border: 0px;
-    background-color: #d0ccd0;
+  overflow: scroll;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  background-color: #d0ccd0;
+}
+
+main {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.texttext {
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 /* Navigation */
@@ -112,4 +124,15 @@ footer ul li a {
 footer ul li {
   list-style: none;
   display: inline-block;
+}
+
+@media (min-width: 600px) {
+  nav {
+    display: block;
+    position: static;
+  }
+
+  label i {
+    display: none;
+  }
 }
